<resources>
    <string name="app_name">Piket Codelabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nim">NIM</string>
    <string name="password">Password</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="piket">Piket</string>
    <string name="sudah_piket">Sudah Piket</string>
    <string name="belum_piket">Belum Piket</string>
    <string name="codelabs_small_green">Codelabs Small Green</string>
    <string name="example_nim">10118371</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="v1_0">v1.0</string>
    <string name="masuk">Masuk</string>
    <string name="buat_password">Buat Password</string>
    <string name="andri">Andri</string>
    <string name="sedot_debu">Sedot Debu</string>
    <string name="selesai">Selesai</string>
    <string name="failed">Failed</string>
    <string name="empty">Empty List</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="notification_channel_description">Piket</string>
    <string name="bullet">•</string>
    <string name="inspected_by">Inspected By :</string>
</resources>
