<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.7"
    android:background="@drawable/bg_item_sudah_piket">

    <TextView
        android:id="@+id/tv_nama"
        style="@style/Theme.Piket.NameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/andri"
        app:layout_constraintEnd_toStartOf="@+id/btn_selesai"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_duty"
        style="@style/Theme.Piket.DutyItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sedot_debu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_nama"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_selesai"
        style="@style/Widget.SudahPiket.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/selesai"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_loading"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:visibility="invisible"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_selesai"
        app:layout_constraintEnd_toEndOf="@+id/btn_selesai"
        app:layout_constraintStart_toStartOf="@+id/btn_selesai"
        app:layout_constraintTop_toTopOf="@+id/btn_selesai" />

    <ImageView
        android:id="@+id/iv_checklist"
        android:src="@drawable/tick"
        android:layout_width="30dp"
        android:layout_height="30sp"
        android:elevation="30dp"
        android:visibility="invisible"
        android:layout_marginRight="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>